# 2fickle2fly

./: CMakeLists.txt  README.md  main.cpp
api/sdl/: SDLInitiator.cpp  SDLInitiator.h
api/sdl/errors/: SDLError.cpp  SDLError.h
api/sdl/texture/: Texture.cpp  Texture.h
api/sdl/window/: Window.cpp  Window.h
engine/: GameEngine.cpp  GameEngine.h
engine/drawables/: Color.h  GameObject.cpp  GameObject.h  Rect.h
engine/input/: EventEmitter.cpp  EventEmitter.h
engine/math/: Direction.h  Vec2.h
engine/misc/: ForwardIdGenerator.h  Identifiable.h
engine/physics/collisions/: BoundingBox.cpp  BoundingBox.h  CollisionAggregator.cpp  CollisionAggregator.h  CollisionData.cpp  CollisionData.h  CollisionDetector.cpp  CollisionDetector.h  CollisionResolver.cpp  CollisionResolver.h  Segmenter.cpp  Segmenter.h
engine/rendering/: Renderer.cpp  Renderer.h
engine/storage/: PrimitivesStorage.h
games/breakout/: Breakout.cpp  Breakout.h
games/breakout/levels/: LevelBuilder.cpp  LevelBuilder.h
games/descending/: descending.cpp  descending.h
games/tetris/: tetris.cpp  tetris.h
osplatform/: Time.h
tests/: BoundingBox_test.cpp  CollisionAggregator_test.cpp  CollisionDetector_test.cpp  CollisionResolver_test.cpp  Segmenter_test.cpp  Vec2.cpp  Vec2_test.cpp
ui/: Button.h  ProgressBar.cpp  ProgressBar.h  UITex.cpp  UITex.h
